k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kledeli-service
  labels:
    app: kledeli
spec:
  type: LoadBalancer
  ports:
    - port: 30100
      targetPort: 80
  selector:
    app: kledeli
